@@ -60,6 +60,7 @@ from zip archives and one for how to create/modify them.
 .Xr zip_fclose 3
 .Ss close archive
 .Xr zip_close 3
+.Xr zip_discard 3
 .Ss miscellaneous
 .Xr zip_stat 3
 .Xr zip_get_archive_comment 3
