@@ -1,5 +1,5 @@
-.\" zip_close.mdoc -- close zip archive
-.\" Copyright (C) 2003-2012 Dieter Baron and Thomas Klausner
+.\" zip_discard.mdoc -- close zip archive and discard changes
+.\" Copyright (C) 2012 Dieter Baron and Thomas Klausner
 .\"
 .\" This file is part of libzip, a library to manipulate ZIP archives.
 .\" The authors can be contacted at <libzip@nih.at>
@@ -30,83 +30,27 @@
 .\" IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
 .\"
 .Dd February 13, 2012
-.Dt ZIP_CLOSE 3
+.Dt ZIP_DISCARD 3
 .Os
 .Sh NAME
-.Nm zip_close
-.Nd close zip archive
+.Nm zip_discard
+.Nd close zip archive and discard changes
 .Sh LIBRARY
 libzip (-lzip)
 .Sh SYNOPSIS
 .In zip.h
-.Ft int
-.Fn zip_close "struct zip *archive"
+.Ft void
+.Fn zip_discard "struct zip *archive"
 .Sh DESCRIPTION
 The
-.Fn zip_close
+.Fn zip_discard
 function closes
 .Ar archive
 and frees the memory allocated for it.
-If any files within were changed, those changes are written to disk
-first.
-If writing changes fails,
-.Fn zip_close
-fails and
-.Ar archive
-is left unchanged.
-If
-.Ar archive
-contains no files, the file is completely removed (no empty archive is
-written).
-.Pp
-To close a zip file without saving changes, use
-.Xr zip_discard 3 .
-.Sh RETURN VALUES
-Upon successful completion 0 is returned.
-Otherwise, \-1 is returned and the error code in
-.Ar archive
-is set to indicate the error.
-.Sh ERRORS
-.Fn zip_close
-will fail if:
-.Bl -tag -width Er
-.It Bq Er ZIP_ER_EOF
-Unexpected end-of-file found while reading from a file.
-.It Bq Er ZIP_ER_INTERNAL
-The callback function of an added or replaced file returned an
-error but failed to report which.
-.It Bq Er ZIP_ER_INVAL
-The
-.Ar path
-argument is
-.Dv NULL .
-.It Bq Er ZIP_ER_MEMORY
-Required memory could not be allocated.
-.It Bq Er ZIP_ER_NOZIP
-File is not a zip archive.
-.It Bq Er ZIP_ER_READ
-A file read failed.
-.It Bq Er ZIP_ER_RENAME
-A temporary file could not be renamed to its final name.
-.It Bq Er ZIP_ER_SEEK
-A file seek failed.
-.It Bq Er ZIP_ER_TMPOPEN
-A temporary file could not be created.
-.It Bq Er ZIP_ER_WRITE
-A file write failed.
-.It Bq Er ZIP_ER_ZLIB
-An error occurred while (de)compressing a stream with
-.Xr zlib 3 .
-.El
-Additionally, any errors returned by the callback function
-for added or replaced files will be passed back.
+Any changes to the archive are not written to disk and discarded.
 .Sh SEE ALSO
 .Xr libzip 3 ,
-.Xr zip_discard 3 ,
-.Xr zip_error_get 3 ,
-.Xr zip_fdopen 3 ,
-.Xr zip_open 3 ,
-.Xr zip_strerror 3
+.Xr zip_close 3
 .Sh AUTHORS
 .An -nosplit
 .An Dieter Baron Aq dillo@giga.or.at
